--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,39 +1,40 @@
 {
   "name": "ngo-ai-landing",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "typecheck": "tsc --noEmit",
-    "postinstall": "prisma generate",
     "prepare": "prisma generate",
+    "postinstall": "prisma generate",
     "migrate": "prisma migrate dev --name init",
-    "db:push": "prisma db push"
+    "db:push": "prisma db push",
+    "seed": "node apps/web/prisma/seed.js"
   },
   "dependencies": {
     "@prisma/client": "^4.5.0",
+    "framer-motion": "^12.26.2",
+    "lucide-react": "^0.562.0",
     "next": "14.1.0",
     "pg": "^8.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^3.4.0",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@types/node": "^25.0.9",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
     "eslint": "^8.50.0",
     "eslint-config-next": "^13.1.2",
-    "framer-motion": "^12.26.2",
-    "lucide-react": "^0.562.0",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.38",
     "prisma": "^4.5.0",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.3"
   }
 }
