--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,11 +1,9 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "package.json",
-            "use": "@vercel/next"
-        }
-    ],
+    "buildCommand": "cd apps/web && npm run build",
+    "outputDirectory": "apps/web/.next",
+    "installCommand": "cd apps/web && npm install",
+    "framework": "nextjs",
     "env": {
         "DATABASE_URL": "@database_url"
     }
